# graduation_project

./: pyproject.toml
table_order/: manage.py
table_order/table_order/: asgi.py  settings.py  urls.py  wsgi.py
