[tool.poetry]
name = "graduation-project"
version = "0.1.0"
description = ""
authors = ["soulfly2007 <andreymekhedko@gmail.com>"]
readme = "README.md"
packages = [{include = "table_order"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
